tests/Enums/Bad/NoCases.php
<?php

namespace MatthewPageUK\BittyEnums\Tests\Enums\Bad;

use MatthewPageUK\BittyEnums\Contracts\BittyEnum;

enum NoCases: int implements BittyEnum
{
    // No cases defined
}
